Add configurable texts for the location and time of the exchange

--- a/polybookexchange/templates/polybookexchange/admin.html
+++ b/polybookexchange/templates/polybookexchange/admin.html
@@ -74,6 +74,14 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-3">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <h3><i class="fas fa-pencil"></i></h3>
+                        <p><a href="{% url 'polybookexchange.views.edit_texts' %}" class="btn btn-info" role="button">{% trans "Edit texts" %}</a></p>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="row">
