--- a/polybookexchange/templates/polybookexchange/exemplar.html
+++ b/polybookexchange/templates/polybookexchange/exemplar.html
@@ -83,7 +83,7 @@
 
     {% if not exemplar.sold_date %}
         <div class="alert alert-info">
-            {% blocktrans with id=exemplar.id %}To buy this book, please come to AGEPoly's book exchange from Tuesday, September 27, 2022 to Thursday, September 29, 2022 between 8:45 AM and 5:15 PM at CO floor 0 and find the book number <b>{{id}}</b>!{% endblocktrans %}
+            {% blocktrans with id=exemplar.id %}To buy this book, please come to AGEPoly's book exchange {{exchange_time}} {{exchange_location}} and find the book number <b>{{id}}</b>!{% endblocktrans %}
         </div>
     {% endif %}
 
