--- a/polybookexchange/templates/polybookexchange/base.html
+++ b/polybookexchange/templates/polybookexchange/base.html
@@ -107,6 +107,13 @@
 
             </div>
             <div class="col-9 offset-3 col-md-10 offset-md-2 main">
+
+                {% for message in messages %}
+                    <div class="alert alert-{{message.tags}}">
+                        {{message}}
+                    </div>
+                {% endfor %}
+
                 {% block content %}
                 {% endblock %}
             </div>
